created function and trigger update status time

--- a/src/main/resources/db/changelog/changeset/create-function-update-status_time.yaml
+++ b/src/main/resources/db/changelog/changeset/create-function-update-status_time.yaml
@@ -1,13 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 1-4
+      id: 1-3
       author: Bulaukin
       comment: Created trigger function for updated status_time
       changes:
-        - createFunction:
-            catalogName: search_engine
-            dbms: postgresql
-            encoding: UTF-8
+        - sqlFile:
             path: sql\update-status_time-function.sql
-            functionName: update_creation_time_function
-            schemaName: search_engine_schema
+            relativeToChangelogFile: true
+            splitStatements: false
