--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,8 +3,9 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-site.yaml
   - include:
       file: db/changelog/changeset/create-table-page.yaml
-#  - include:
-#      file: db/changelog/changeset/create-trigger-update-status_time.yaml
-#  - include:
-#      file: db/changelog/changeset/create-function-update-status_time.yaml
+  - include:
+      file: db/changelog/changeset/create-function-update-status_time.yaml
+  - include:
+      file: db/changelog/changeset/create-trigger-update-status_time.yaml
+
 
