--- a/src/main/resources/db/changelog/changeset/create-trigger-update-status_time.yaml
+++ b/src/main/resources/db/changelog/changeset/create-trigger-update-status_time.yaml
@@ -1,18 +1,13 @@
 databaseChangeLog:
   - changeSet:
-      id: 1-3
+      id: 1-4
       author: Bulaukin
       comment: created trigger for changed status_time
       changes:
-        - createTrigger:
-            catalogName: search_engine
-            dbms: postgresql
-            encoding: UTF-8
-            schemaName: search_engine_schema
-            tableName: page
-            path: sql\update-status_time-trigger.sql
-            relativeToChangelogFile: true
-            triggerName: update_creation_time_trigger
+        - sqlFile:
+              path: sql\update-status_time-trigger.sql
+              relativeToChangelogFile: true
+              splitStatements: false
 
 
 
