--- a/build.gradle
+++ b/build.gradle
@@ -29,15 +29,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-// https://mvnrepository.com/artifact/com.github.gavlyukovskiy/p6spy-spring-boot-starter
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.0.RELEASE'
-// https://mvnrepository.com/artifact/org.jsoup/jsoup
 	implementation 'org.jsoup:jsoup:1.18.1'
-// https://mvnrepository.com/artifact/com.opencsv/opencsv
+	implementation 'commons-beanutils:commons-beanutils:1.9.4'
 	implementation 'com.opencsv:opencsv:5.9'
-
-
-
+	compileOnly 'org.springframework.boot:spring-boot-devtools:3.3.4'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
